Resolves the response overflow in vertical layouts

--- a/Survey/source/styles/formal/_o-question.scss
+++ b/Survey/source/styles/formal/_o-question.scss
@@ -40,7 +40,8 @@
 
 }
 
-.o-question-core > .o-question-response {
+.o-question-core > .o-question-response,
+.o-question-core question > .o-question-response {
     overflow: auto;
 }
 
